--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -46,22 +46,12 @@
     <div class="about-me-content">
       <div class="more-content">
         <h2 class="highlight-word">About Me</h2>
-        
-        <% if (portfolioData && portfolioData.aboutMe && portfolioData.aboutMe.description) { %>
-          <% portfolioData.aboutMe.description.forEach((line) => { %>
-            <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
-              <%= line %>
-            </p>
-          <% }) %>
-        <% } else { %>
-          <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
-            Hey there, my name is <span class="highlight-word">Keziah</span> and here are some stuff about me!
-          </p>
-          <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
-            I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program.
-          </p>
-        <% } %>
-  
+        <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
+          <%= portfolioData.aboutMe.description ? portfolioData.aboutMe.description[0] : 'Hey there, my name is Keziah and here are some stuff about me!' %>
+        </p>
+        <p class="editable-content" contenteditable="<%= isAuthenticated ? 'false' : 'true' %>">
+          <%= portfolioData.aboutMe.description ? portfolioData.aboutMe.description[1] : 'I am currently a student at the British Columbia Institute of Technology (BCIT), pursuing a diploma in the Computer Information Technology (CIT) program.' %>
+        </p>
         <% if (isAuthenticated) { %>
           <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
         <% } %>
@@ -69,6 +59,7 @@
       <img id="profile-pic" src="/images/just-trying-it-out.png" alt="me">
     </div>
   </div>
+  
 
   <div id="hobbies">
     <img src="/images/cam1.png" alt="idk">
