--- a/public/styles.css
+++ b/public/styles.css
@@ -350,6 +350,39 @@ header h1 {
   text-align: center; /* Center content inside */
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 /* Media query for smaller screens */
 @media (max-width: 600px) {
   nav ul li:not(.dropdown) {
@@ -381,3 +414,4 @@ header img {
   height: auto;
   display: block;
 }
+
