--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -81,66 +81,85 @@
     </div>
   </div>
 
+
+
   <div id="hobbies">
-    <img src="/images/cam1.png" alt="idk">
-    <div style="margin-left: 5%;" class="more-content">
-      <h2 class="highlight-word editable-content" contenteditable="false">Some Hobbies I love:</h2>
-      <% if (isAuthenticated) { %>
-        <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
-      <% } %>
-      <ul>
-        <li class="editable-content" contenteditable="false">Building Computers and keyboards!</li>
-        <li class="editable-content" contenteditable="false">Going on walks (sometimes hiking)</li>
-        <li class="editable-content" contenteditable="false">Badminton</li>
-        <li class="editable-content" contenteditable="false">Reading Books! (currently on a Fantasy Genre Spree)</li>
-        <li class="editable-content" contenteditable="false">Photography!</li>
-        <li class="editable-content" contenteditable="false">and especially, food!</li>
-      </ul>
-    </div>
-  </div>
-
-  <div id="projects">
-    <div>
-      <h2 class="highlight-word">Projects</h2>
-      <div class="projects-container">
-        <div>
-          <h4 class="highlight-word editable-content" contenteditable="false">VetVault (Pet Tracker)</h4>
-          <% if (isAuthenticated) { %>
-            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
-          <% } %>
-          <ul>
-            <li class="editable-content" contenteditable="false">A mini-project to track your furry friends or animals.</li>
-            <li class="editable-content" contenteditable="false">It also simulates Customer-Vetrinarian communication to facilitate medicine for their animals.</li>
-            <li class="editable-content" contenteditable="false">Uses MySQL database where we incorporated triggers, and other functions.</li>
-            <li class="editable-content" contenteditable="false">Node.JS for backend, with login system as well.</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 class="highlight-word editable-content" contenteditable="false">RemindlyProject</h4>
-          <% if (isAuthenticated) { %>
-            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
-          <% } %>
-          <ul>
-            <li class="editable-content" contenteditable="false">Is a reminder web application, where you can add, delete, and edit reminders.</li>
-            <li class="editable-content" contenteditable="false">Utilizes Node.JS and other node modules such as "passport" and "OAuth".</li>
-          </ul>
-        </div>
-
-        <div>
-          <h4 class="highlight-word editable-content" contenteditable="false">Subscription System</h4>
-          <% if (isAuthenticated) { %>
-            <button class="edit-btn" onclick="toggleEditMode(this)">Edit</button>
-          <% } %>
-          <ul>
-            <li class="editable-content" contenteditable="false">Currently working in progress</li>
-            <li class="editable-content" contenteditable="false">The aim is to have a subscription system working along with creating a working free-trial.</li>
-            <li class="editable-content" contenteditable="false">Utilizes Google Cloud Project, and its services to fully deploy the application.</li>
-          </ul>
-        </div>
+    <div class="hobbies-content">
+      <div class="more-content">
+        <h2 class="highlight-word">Some Hobbies I love:</h2>
+        
+        <ul>
+          <% portfolioData.hobbies.forEach(function(hobby, index) { %>
+            <li class="editable-content" name="hobby<%= index %>">
+              <%= hobby %>
+            </li>
+          <% }); %>
+        </ul>
+  
+        <% if (isAuthenticated) { %>
+          <button class="edit-btn" onclick="openEditHobbiesModal()">Edit</button>
+        <% } %>
       </div>
     </div>
   </div>
+  
+<!-- Modal for editing Hobbies -->
+<div id="edit-hobbies-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeEditModal()">&times;</span>
+    <h3>Edit Hobbies</h3>
+    <form id="edit-hobbies-form" method="POST" action="/save-hobbies">
+      <label for="hobbiesDescription">Hobbies:</label>
+      <textarea name="hobbiesDescription" id="hobbiesDescription" rows="4" required>
+        <%= portfolioData.hobbies ? portfolioData.hobbies.join('\n') : '' %>
+      </textarea>
+
+      <button type="submit">Save</button>
+    </form>
+  </div>
+</div>
+
+  
+
+<div id="projects">
+  <h2 class="highlight-word">Projects</h2>
+  <div class="projects-container">
+    <% portfolioData.projects.forEach(function(project, index) { %>
+      <div class="project-item">
+        <h4 class="highlight-word"><%= project.name %></h4>
+        <ul>
+          <% project.description.forEach(function(desc) { %>
+            <li><%= desc %></li>
+          <% }); %>
+        </ul>
+        
+        <% if (isAuthenticated) { %>
+          <button class="edit-btn" onclick="openEditProjectModal(<%= index %>)">Edit</button>
+        <% } %>
+      </div>
+    <% }); %>
+  </div>
+</div>
+
+
+<!-- Modal for editing Projects -->
+<div id="edit-projects-modal" class="modal">
+  <div class="modal-content">
+    <span class="close" onclick="closeEditModal()">&times;</span>
+    <h3>Edit Project</h3>
+    <form id="edit-project-form" method="POST" action="/save-project">
+      <label for="projectName">Project Name:</label>
+      <input type="text" name="projectName" id="projectName" required>
+      
+      <label for="projectDescription">Project Description:</label>
+      <textarea name="projectDescription" id="projectDescription" rows="4" required></textarea>
+
+      <button type="submit">Save</button>
+    </form>
+  </div>
+</div>
+
+
 
   <div id="github-contributions">
     <h2 class="highlight-word">GitHub</h2>
