--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -38,10 +38,6 @@
     </ul>
   </nav>
 
-  <% if (user && isAuthenticated) { %>
-    <h1>welcome back <%= user.displayName %>!</h1>
-  <% } %>
-
   <div id="about-me">
     <div class="about-me-content">
       <div class="more-content">
@@ -56,7 +52,7 @@
         </p>
   
         <% if (isAuthenticated) { %>
-          <button class="edit-btn" onclick="openEditModal()">Edit</button>
+          <button class="edit-btn" onclick="openEditAboutModal()">Edit</button>
         <% } %>
       </div>
   
