--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -113,11 +113,11 @@
   <div>
     <h2 class="highlight-word">Projects</h2>
     <div class="projects-container">
-      <% portfolioData.projects.forEach(function(project, index) { %>
+      <% portfolioData.projects.forEach(function(project) { %>
         <div>
-          <h4 class="highlight-word editable-content" contenteditable="false"><%= project.name %></h4> <!-- Change project.title to project.name -->
+          <h4 class="highlight-word editable-content" contenteditable="false"><%= project.name %></h4>
           <% if (isAuthenticated) { %>
-            <button class="edit-btn" onclick="openEditProjectModal(<%= index %>)">Edit</button>
+            <button class="edit-btn" onclick="openEditProjectModal('<%= project.projectId %>')">Edit</button>
           <% } %>
           <ul>
             <% project.description.forEach(function(desc) { %>
@@ -132,26 +132,27 @@
 
 
 
-
 <!-- Modal for editing Projects -->
 <div id="edit-projects-modal" class="modal">
   <div class="modal-content">
     <span class="close" onclick="closeEditModal('projects')">&times;</span>
     <h3>Edit Project</h3>
     <form id="edit-project-form" method="POST" action="/save-project">
+      <!-- Hidden input for projectId -->
+      <input type="hidden" name="project-id" id="project-id">
+
       <!-- Project title input -->
       <label for="project-name">Project Title:</label>
-      <input type="text" name="project-name" id="project-name" value="<%= portfolioData.projects[0].name %>" required>
+      <input type="text" name="project-name" id="project-name" required>
       
       <!-- Project description input -->
       <label for="project-description">Project Description:</label>
-      <textarea name="project-description" id="project-description" rows="4" required><%= portfolioData.projects[0].description.join('\n') %></textarea>
+      <textarea name="project-description" id="project-description" rows="4" required></textarea>
       
       <button type="submit">Save</button>
     </form>
   </div>
 </div>
-
 
 
   <div id="github-contributions">
