--- a/views/personal.ejs
+++ b/views/personal.ejs
@@ -115,12 +115,12 @@
     <div class="projects-container">
       <% portfolioData.projects.forEach(function(project) { %>
         <div>
-          <h4 class="highlight-word editable-content" contenteditable="false"><%= projects.name %></h4>
+          <h4 class="highlight-word editable-content" contenteditable="false"><%= name %></h4>
           <% if (isAuthenticated) { %>
-            <button class="edit-btn" onclick="openEditProjectModal('<%= projects.projectId %>')">Edit</button>
+            <button class="edit-btn" onclick="openEditProjectModal('<%= projectId %>')">Edit</button>
           <% } %>
           <ul>
-            <% projects.description.forEach(function(desc) { %>
+            <% description.forEach(function(desc) { %>
               <li class="editable-content" contenteditable="false"><%= desc %></li>
             <% }); %>
           </ul>
