--- a/public/styles.css
+++ b/public/styles.css
@@ -264,6 +264,7 @@ header h1 {
   justify-content: center;
   align-items: center;
   height: 100vh; /* Ensure it takes the full viewport height */
+  width: 50vh;
   color: black;
 
 }
